--- a/src/components/Location/Location.css
+++ b/src/components/Location/Location.css
@@ -83,9 +83,13 @@
 }
 
 @media screen and (max-width: 576px) {
+    body {
+        overflow-x: hidden; 
+    }
     .location-container {
         margin-left: 5vw;
         max-width: 90%;
+        margin-bottom: 100px;
     }
 
     .contact h3 {
@@ -95,6 +99,12 @@
     }
 
     .google-map {
-        height: 300px;
+        width: 100%;
+        max-width: calc(100vw - 40px); 
+        height: 300px; 
+        margin: 0 auto;
     }
 }
+
+
+
