--- a/src/components/UserAction/Login/Login.css
+++ b/src/components/UserAction/Login/Login.css
@@ -23,9 +23,10 @@ body {
 
 .login-form h2 {
     margin-bottom: 5%;
-    font-size: 2.2rem;
+    font-size: 2.4em;
     font-family: "Merriweather", sans-serif;
     text-align: center;
+    color: #d39f4a;
 }
 
 .form-group {
